Muchos cambios para el Entorno Responsivo
Este ha sido el primer commit real porque en ningún momento he sentido la necesidad de "guardar", ya que no siento que realmente se haya terminado algo en concreto.
Se cambia una cosa en x cabecera, en las otras no funciona, se modifican las otras y ya las primeras necesitan un cambio... Por ahora ha sido todo bastante caos. 

Por suerte, gran parte de la página ya tenía gran parte de diseño responsivo, pues gracias a varios cursos que he hecho pude tener la intuición de usar flex, porcentajes o grids, que facilitan esta parte. Aún así hay muchos cambios.

Sobre todo se han cambiado cosas sutiles como:
 - La página de Inicio de la página
 - Las categorías
 - Parte del inicio del perfil de usuario(que espero ayude a las otras 2 partes del perfil)
  - Las cabeceras tanto de la zona de perfil como las generales.

--- a/web/Compra/Cesta/cesta.html
+++ b/web/Compra/Cesta/cesta.html
@@ -26,15 +26,19 @@
     <!--Se asume que a la hora de tener x elementos en el carrito
     se habrán insertado x li dentro de "articulos"-->
     <div class="carrito">
-        <ul id="articulos">
-            <li class="izq producto">Articulo 1</li>
-            <li class="izq producto">Articulo 2</li>
-            <li class="izq producto">Articulo 3</li>
-            <li class="izq producto">Articulo 4</li>
-        </ul>
-        <div class="der costo">
-            <div>Costo total</div>
-            <p id="costoTotal">50€</p>
+        <div id="articulos">
+            <div class="producto" id="p1">Articulo 1</div>
+            <div class="producto" id="p2">Articulo 2</div>
+            <div class="producto" id="p3">Articulo 3</div>
+            <div class="producto" id="p4">Articulo 4</div>
+            <div class="producto" id="p5">Articulo 1</div>
+            <div class="producto" id="p6">Articulo 2</div>
+            <div class="producto" id="p7">Articulo 3</div>
+            <div class="producto" id="p8">Articulo 4</div>
         </div>
+    </div>
+    <div class="costo">
+        <div>Costo total</div>
+        <p id="costoTotal">50€</p>
     </div>
 </body>
