--- a/web/Compra/catalogoCompras.html
+++ b/web/Compra/catalogoCompras.html
@@ -20,10 +20,10 @@
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
+                    <div class="box">
                         <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                     </div>
-                    <div>
+                    <div class="box">
                         <p id="nombreUser" class="userName">Nombre de usuario</p>
                     </div>
                 </a>
