--- a/web/Compra/categoriasCompra.html
+++ b/web/Compra/categoriasCompra.html
@@ -4,6 +4,7 @@
 <head>
     <title>Categorías</title>
     <link rel="stylesheet" href="/CSS/categorias.css">
+    <link rel="stylesheet" href="/CSS/pequeño/categorias_pequeño.css" media="only screen and (max-width: 960px)">
     <link rel="stylesheet" href="/CSS/header_footer/footer.css">
     <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
@@ -19,11 +20,11 @@
             <!--Parte del usuario-->
             <div>
                 <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
+                    <div>
                         <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
                     </div>
                     <div>
-                        <p id="nombreUser" class="userName">Nombre de usuario</p>
+                        <p id="nombreUser" class="userName">AitanaCC</p>
                     </div>
                 </a>
             </div>
