--- a/web/CódigoReutilizable/headerCompra.html
+++ b/web/CódigoReutilizable/headerCompra.html
@@ -4,7 +4,13 @@
         <div class="nombre">
             <p>Nombre</p>
         </div>
-
+        <div class="izq full">
+            <ul class="cabecera">
+                <li><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
+                <li class="choosen"><a href="/web/PerfilUsuario/Compras.html">Compras</a></li>
+                <li><a href="/web/PerfilUsuario/Ventas.html">Vender</a></li>
+            </ul>
+        </div>
         <!--Parte del usuario-->
         <div>
             <a href="/web/PerfilUsuario/Inicio.html">
@@ -18,11 +24,14 @@
         </div>
         <!--Separación-->
         <sep class="sep"></sep>
-        <!--Favoritos-->
+
+        <!--Carrito-->
         <div>
-            <a href="\web\Compra\favsCompra.html">
+            <a href="/web/Compra/Cesta/cesta.html">
                 <div class="cuadro">
-                    <img src="/img/Logos/fav0.png" class="foto-c  foto">
+                    <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                </div>
+                <div>
                 </div>
             </a>
         </div>
@@ -30,9 +39,9 @@
         <sep class="sep"></sep>
         <!--Favoritos-->
         <div>
-            <a href="/web/Compra/Cesta/cesta.html">
+            <a href="\web\Compra\favsCompra.html">
                 <div class="cuadro">
-                    <img src="/img/Logos/chat.png" class="foto-c  foto">
+                    <img src="/img/Logos/fav0.png" class="foto-c  foto">
                 </div>
             </a>
         </div>
