--- a/web/CódigoReutilizable/headerVenta.html
+++ b/web/CódigoReutilizable/headerVenta.html
@@ -5,6 +5,15 @@
             <p>Nombre</p>
         </div>
 
+
+        <div class="izq full">
+            <ul class="cabecera">
+                <li><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
+                <li><a href="/web/PerfilUsuario/Compras.html">Compras</a></li>
+                <li class="choosen"><a href="/web/PerfilUsuario/Ventas.html">Vender</a></li>
+            </ul>
+        </div>
+
         <!--Parte del usuario-->
         <div>
             <a href="/web/PerfilUsuario/Inicio.html">
