--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -46,7 +46,6 @@
                         <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
                     </div>
                     <div>
-                        <p class="c-nombre">Carrito</p>
                     </div>
                 </a>
             </div>
@@ -69,7 +68,7 @@
             <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200" />
         </div>
         <!--Fondo de los datos-->
-        <div class="der recuadro top-m">
+        <div class="der recuadro scroll top-m">
             <div class="cuad">
                 <!--zona de los datos-->
                 <div class="izq cent">
