--- a/web/Venta/categoriasVenta.html
+++ b/web/Venta/categoriasVenta.html
@@ -4,6 +4,7 @@
 <head>
     <title>Categorías</title>
     <link rel="stylesheet" href="/CSS/categorias.css">
+    <link rel="stylesheet" href="/CSS/pequeño/categorias_pequeño.css" media="screen and (max-witdh: 960px)">
     <link rel="stylesheet" href="/CSS/header_footer/footer.css">
     <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
@@ -49,9 +50,13 @@
             </div>
         </div>
     </header>
-
+    <footer>
+        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
+            <br/> Copyrigth@Aitana&Cristóbal
+            <br/> Esta página web está aprobadisima.</p>
+    </footer>
     <!--Parte de la izquierda-->
-    <div class="flex">
+    <div>
         <div class="recuadro">
             <div>
                 <ul class="l-mar l-pad">
@@ -70,9 +75,5 @@
             />
         </div>
     </div>
-    <footer>
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+
 </body>
