--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Index Página</title>
     <link rel="stylesheet" href="/CSS/inicio.css">
+    <link rel="stylesheet" href="/CSS/pequeño/inicio_pequeño.css" media="only screen and (max-width: 960px)">
 </head>
 
 <body>
