Actualización de perfiles
Se han actualizado todos los perfiles de forma que en todos sean responsivos.

--- a/web/PerfilUsuario/Compras.html
+++ b/web/PerfilUsuario/Compras.html
@@ -64,7 +64,7 @@
     <!--Fondo gris-->
     <div class="f-gris">
         <!--Imagen del usuario-->
-        <div>
+        <div class="grid">
             <div class="izq pict top-m">
                 <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200" />
                 <div class="cent top-m">
