--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -71,7 +71,7 @@
         <div class="der recuadro scroll top-m">
             <div class="cuad">
                 <!--zona de los datos-->
-                <div class="izq cent">
+                <div class="izq  datos">
                     <div>
                         <p id="userName">Nombre completo</p>
                     </div>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <!--Zona ubicación-->
-                <div class="der cent">
+                <div class="der mapa">
                     <p>Ubicación</p>
                     <div style="background-color: grey; width: 300px; height: 300px;" id="userUbicacion">
                         mapa
