--- a/web/PerfilUsuario/Ventas.html
+++ b/web/PerfilUsuario/Ventas.html
@@ -64,7 +64,7 @@
     <!--Fondo gris-->
     <div class="f-gris">
         <!--Imagen del usuario-->
-        <div class="izq pict top-m">
+        <div class="izq pict top-m grid">
             <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200" />
             <div class="cent top-m">
                 <form action="/web/PerfilUsuario/Venta-Particular.html">
