Actualización Ventanas de Venta Responsivas
Se han actualizado las ventanas de venta de un objeto para que sean responsivas

--- a/web/PerfilUsuario/Venta-Particular.html
+++ b/web/PerfilUsuario/Venta-Particular.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <title>Introducir una venta</title>
-    
+
     <link rel="stylesheet" href="/CSS/inicio.css">
     <link rel="stylesheet" href="/CSS/header_footer/header.css">
     <link rel="stylesheet" href="/CSS/header_footer/header_perfil.css">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="/CSS/perfil/perfil.css">
     <link rel="stylesheet" href="/CSS/perfil/venta.css">
 </head>
+
 <body>
     <!--Fondo gris-->
     <div class="f-gris top-v v-pad">
@@ -25,7 +27,7 @@
                     <label for="descripcion">Descripción</label>
                     <textarea name="descripcion" id="descripcion"></textarea>
                 </div>
-                <div class="der full">
+                <div class="der full h-250">
                     <label for="ubicacion">Ubicación</label>
                     <div id="ubicacion" class="mapa">
                         mapa
@@ -33,7 +35,7 @@
                 </div>
             </div><br/>
             <div class="full">
-                <div class="line izq">
+                <div class="line izq w-100">
                     <label for="costo">Costo</label><input type="number" id="costo">
                     <label for="Más datos">Más datos</label><input type="text" id="Más datos">
                     <label for="Más datos">Más datos</label><input type="text" id="Más datos2">
@@ -45,7 +47,7 @@
                         <option value="4">Categoría 4</option>
                     </select>
                 </div>
-                <div class="der">
+                <div class="der w-100 m-top">
                     <form action="addPicture">
                         <input type="file" name="objImage" id="objImage">
                         <!--quiero que se entienda que no es estático, a medida que se vayan añadiendo imágenes
@@ -57,13 +59,14 @@
                             <div><img src="/img/Logos/def-photo.png" class="image"></div>
                             <div><img src="/img/Logos/def-photo.png" class="image"></div>
                         </div>
-                    </form>    
+                    </form>
                 </div>
             </div>
             <div class="cent">
-                <input type="submit" name="addObject" id="addObject"/>
+                <input type="submit" name="addObject" id="addObject" />
             </div>
         </form>
     </div>
 </body>
+
 </html>
