Add JQuery a Header/Footer y pequeños cambios
Se ha añadido JQuery a todos los ficheros para una "menor" repetición de código en headers y footers. 

También se han hecho pequeños cambios que encontramos mal en la zona de los objetos al hacer hover.

--- a/web/Compra/Cesta/cesta.html
+++ b/web/Compra/Cesta/cesta.html
@@ -5,6 +5,7 @@
     <title>Cesta</title>
     <link rel="stylesheet" href="/CSS/catalogo.css">
     <link rel="stylesheet" href="/CSS/cesta/cesta.css">
+    <link rel="stylesheet" href="/CSS/header_footer/footer.css">
 </head>
 
 <body>
@@ -41,4 +42,13 @@
         <div>Costo total</div>
         <p id="costoTotal">50€</p>
     </div>
+
+    <footer id="footer"></footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function(){
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
