--- a/web/CódigoReutilizable/header_venta.html
+++ b/web/CódigoReutilizable/header_venta.html
@@ -1,15 +1,9 @@
 <header>
+    <link rel="stylesheet" href="/CSS/header_footer/header.css">
     <div class="cab-fondo">
         <!--Nombre de la tienda-->
         <div class="nombre">
             <p>Nombre</p>
-        </div>
-        <div class="izq full">
-            <ul class="cabecera">
-                <li><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
-                <li class="choosen"><a href="/web/PerfilUsuario/Compras.html">Compras</a></li>
-                <li><a href="/web/PerfilUsuario/Ventas.html">Vender</a></li>
-            </ul>
         </div>
         <!--Parte del usuario-->
         <div>
@@ -22,26 +16,22 @@
                 </div>
             </a>
         </div>
-        <!--Separación-->
-        <sep class="sep"></sep>
-
-        <!--Carrito-->
-        <div>
-            <a href="/web/Compra/Cesta/cesta.html">
-                <div class="cuadro">
-                    <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
-                </div>
-                <div>
-                </div>
-            </a>
-        </div>
-        <!--Separación-->
         <sep class="sep"></sep>
         <!--Favoritos-->
         <div>
             <a href="\web\Compra\favsCompra.html">
                 <div class="cuadro">
                     <img src="/img/Logos/fav0.png" class="foto-c  foto">
+                </div>
+            </a>
+        </div>
+        <!--Separación-->
+        <sep class="sep"></sep>
+        <!--Carrito-->
+        <div>
+            <a href="/web/Venta/chat.html">
+                <div class="cuadro">
+                    <img src="/img/Logos/chat.png" class="foto-c  foto">
                 </div>
             </a>
         </div>
