--- a/web/Compra/Cesta/op2.html
+++ b/web/Compra/Cesta/op2.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Envío a domicilio</title>
+    <link rel="stylesheet" href="/CSS/catalogo.css">
     <link rel="stylesheet" href="/CSS/cesta/cesta.css">
     <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
@@ -44,16 +45,20 @@
         </form>
         <!--Parte de abajo, articulos en la cesta-->
         <div class="carrito">
-            <div class="der costo">
-                <div>Costo total</div>
-                <p id="costoTotal">50€</p>
+            <div id="articulos">
+                <div class="producto" id="p1">Articulo 1</div>
+                <div class="producto" id="p2">Articulo 2</div>
+                <div class="producto" id="p3">Articulo 3</div>
+                <div class="producto" id="p4">Articulo 4</div>
+                <div class="producto" id="p5">Articulo 1</div>
+                <div class="producto" id="p6">Articulo 2</div>
+                <div class="producto" id="p7">Articulo 3</div>
+                <div class="producto" id="p8">Articulo 4</div>
             </div>
-            <ul id="ariculos">
-                <li class="izq producto">Articulo 1</li>
-                <li class="izq producto">Articulo 2</li>
-                <li class="izq producto">Articulo 3</li>
-                <li class="izq producto">Articulo 4</li>
-            </ul>
+        </div>
+        <div class="costo">
+            <div>Costo total</div>
+            <p id="costoTotal">50€</p>
         </div>
     </div>
 </body>
