--- a/web/Compra/categoriasCompra.html
+++ b/web/Compra/categoriasCompra.html
@@ -10,47 +10,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="cab-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-
-            <!--Parte del usuario-->
-            <div>
-                <a href="/web/PerfilUsuario/Inicio.html">
-                    <div>
-                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
-                    </div>
-                    <div>
-                        <p id="nombreUser" class="userName">AitanaCC</p>
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="\web\Compra\favsCompra.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="/web/Compra/Cesta/cesta.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/chat.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
-
+    
+    <div id="header"></div>
     <!--Parte de la izquierda-->
     <div class="flex">
         <div class="recuadro">
@@ -71,9 +32,13 @@
             />
         </div>
     </div>
-    <footer>
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+    <footer id="footer"></footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function(){
+            $('#header').load("/web/CódigoReutilizable/header_compra.html");
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
