--- a/web/Venta/catalogoVentas.html
+++ b/web/Venta/catalogoVentas.html
@@ -10,46 +10,7 @@
 <!--Insertar cabecera-->
 
 <body>
-    <header>
-        <div class="cab-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-
-            <!--Parte del usuario-->
-            <div>
-                <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
-                    </div>
-                    <div>
-                        <p id="nombreUser" class="userName">Nombre de usuario</p>
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="\web\Venta\favsVenta.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="/web/Venta/chat.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/chat.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
+    <div id="header"></div>
     <div class="padre">
         <template>
             <div class="imagen">
@@ -107,12 +68,14 @@
         </div>
     </div>
 
-    <footer style="position: inherit;">
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+    <footer id="footer"></footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function(){
+            $('#header').load("/web/CódigoReutilizable/header_venta.html");
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
-
 </html>
-<!--Insertar pie de página-->
