--- a/web/Venta/categoriasVenta.html
+++ b/web/Venta/categoriasVenta.html
@@ -10,63 +10,17 @@
 </head>
 
 <body>
-    <header>
-        <div class="cab-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-
-            <!--Parte del usuario-->
-            <div>
-                <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
-                    </div>
-                    <div>
-                        <p id="nombreUser" class="userName">Nombre de usuario</p>
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="\web\Venta\favsVenta.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="/web/Venta/chat.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/chat.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
-    <footer>
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+    <div id="header"></div>
     <!--Parte de la izquierda-->
     <div>
         <div class="recuadro">
-            <div>
-                <ul class="l-mar l-pad">
-                    <li><a href="/web/Venta/catalogoVentas.html" id="camisa">Camisa</a></li>
-                    <li><a href="" id="camiseta">Camiseta</a></li>
-                    <li><a href="" id="pantalon">Pantalón</a></li>
-                    <li><a href="" id="abrigos">Abrigos</a></li>
-                    <li><a href="" id="accesorios">Accesorios</a></li>
-                </ul>
-            </div>
+            <ul class="l-mar l-pad">
+                <li><a href="/web/Venta/catalogoVentas.html" id="camisa">Camisa</a></li>
+                <li><a href="" id="camiseta">Camiseta</a></li>
+                <li><a href="" id="pantalon">Pantalón</a></li>
+                <li><a href="" id="abrigos">Abrigos</a></li>
+                <li><a href="" id="accesorios">Accesorios</a></li>
+            </ul>
         </div>
 
         <!--Parte del fondo "animado"-->
@@ -76,4 +30,13 @@
         </div>
     </div>
 
+    <footer id="footer"></footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function(){
+            $('#header').load("/web/CódigoReutilizable/header_venta.html");
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
