--- a/web/Venta/favsVenta.html
+++ b/web/Venta/favsVenta.html
@@ -9,47 +9,7 @@
 </head>
 
 <body>
-    <header>
-        <div class="cab-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-
-            <!--Parte del usuario-->
-            <div>
-                <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
-                    </div>
-                    <div>
-                        <p id="nombreUser" class="userName">Nombre de usuario</p>
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="\web\Venta\favsVenta.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="/web/Venta/chat.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/chat.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
-
+    <div id="header"></div>
     <div>
         <div class="cent">
             <h1>Favoritos - Venta</h1>
@@ -61,8 +21,8 @@
                         <img src="" id="idImg1" />
                         <div class="content">
                             <h2>Objeto</h2>
-                            <p>Este objeto se encuentra en tienda, es de una seda...</p>
                             <p id="precio">50€</p>
+                            <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
                         </div>
                     </a>
                 </div>
@@ -73,8 +33,8 @@
                     <img src="/img/catalogo/img_prueba.webp" id="idImg1" />
                     <div class="content">
                         <h2>Objeto</h2>
-                        <p>Bonita camisa ejej</p>
                         <p id="precio">50€</p>
+                        <p id="desc">Bonita camisa ejej</p>
                     </div>
                 </a>
             </div>
@@ -82,57 +42,63 @@
                 <img id="idImg4" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
                     <p id="precio">50€</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
                 </div>
             </div>
             <div class="rect imagen">
                 <img id="idImg4" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
                     <p id="precio">50€</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
                 </div>
             </div>
             <div class="rect imagen">
                 <img id="idImg4" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
                     <p id="precio">50€</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
                 </div>
             </div>
             <div class="rect imagen">
                 <img id="idImg4" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
                     <p id="precio">50€</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
+                </div>
+            </div>
+            <div class="rect imagen">
+                <img id="idImg4" />
+                <div class="content">
+                    <h2>Objeto</h2> 
+                    <p id="precio">50€</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
+                    
                 </div>
             </div>
             <div class="rect imagen">
                 <img id="idImg4" />
                 <div class="content">
                     <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
                     <p id="precio">50€</p>
-                </div>
-            </div>
-            <div class="rect imagen">
-                <img id="idImg4" />
-                <div class="content">
-                    <h2>Objeto</h2>
-                    <p>Este objeto se encuentra en tienda, es de una seda...</p>
+                    <p id="desc">Este objeto se encuentra en tienda, es de una seda...</p>
                 </div>
             </div>
         </div>
     </div>
-    <footer style="position: inherit;">
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+
+    <footer style="position:inherit" id="footer"></footer>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function(){
+            $('#header').load("/web/CódigoReutilizable/header_venta.html");
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
 
 </html>
-<!--Insertar pie de página-->
