Se añadieron páginas responsivas
Se añadieron las páginas responsivas que quedaban por editar. En principio, ya están todas las páginas implementadas con Reponsive.

--- a/web/Compra/Cesta/op1.html
+++ b/web/Compra/Cesta/op1.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--Cuadro con contenido-->
-    <div class="recuadro">
+    <div class="recuadro top-l">
         <!--Cabecera que ponga Ubicacion-->
         <div class="cabecera">
             <p class="t-cabecera">Ubicación, Código Postal, ciudad...</p>
