--- a/web/Venta/chat.html
+++ b/web/Venta/chat.html
@@ -57,30 +57,30 @@
                 <ul class="cont-izq">
                     <li class="s-chat">
                         <button class="c-fondo" onclick="chargeChat">
-                        <div id="nombre">
-                            <p id="nombre">Aitana:</p>
+                        <div>
+                            <p id="nombre">Aitana</p>
                         </div>
-                        <div id="ultimoMensaje">
+                        <div>
                             <p id="ultimoMensaje">Hola, me gustaría comprar una cosa</p>
                         </div>
                     </button>
                     </li>
                     <li class="s-chat">
                         <button class="c-fondo" onclick="chargeChat">
-                        <div id="nombre">
+                        <div>
                             <p id="nombre">Cristóbal</p>
                         </div>
-                        <div id="ultimoMensaje">
+                        <div>
                             <p id="ultimoMensaje">Hola, estoy interesado en aprobar</p>
                         </div>
                     </button>
                     </li>
                     <li class="s-chat">
                         <button class="c-fondo" onclick="chargeChat">
-                        <div id="nombre">
+                        <div>
                             <p id="nombre">TutiFruti</p>
                         </div>
-                        <div id="ultimoMensaje">
+                        <div>
                             <p id="ultimoMensaje">Buenas, ¿Sigue en venta la camisa vaquera?</p>
                         </div>
                     </button>
