--- a/web/Compra/Cesta/op2.html
+++ b/web/Compra/Cesta/op2.html
@@ -16,17 +16,17 @@
         </div>
         <form action="/web/Compra/Cesta/opMetodoCompra.html">
             <!--Nombre completo-->
-            <div>
+            <div class="flex">
                 <input type="text" placeholder="Nombre" id="nombre" class=" inp-txt" required>
                 <input type="text" placeholder="Apellido" id="apellido" class="inp-txt der" required>
             </div>
             <!--Contacto-->
-            <div>
+            <div class="flex">
                 <input type="tel" id="numTel" pattern="[6-7][0-9]{8}" placeholder="Número de teléfono" class="inp-txt der" required>
                 <input type="email" name="email" id="email" placeholder="nano@gmail.com" class=" inp-txt" required>
             </div>
             <!--Ubicación-->
-            <div>
+            <div class="flex">
                 <input type="text" name="direccion" id="direccion" class=" inp-txt  der" required placeholder="Dirección">
                 <input type="text" name="codPostal" id="codPostal" pattern="[0-9]{5}" class=" inp-txt" placeholder="Código Postal">
                 <input type="text" name="ciudad" id="ciudad" class=" inp-txt der" placeholder="Ciudad">
