--- a/web/Venta/ComprarObjeto/objParticular.html
+++ b/web/Venta/ComprarObjeto/objParticular.html
@@ -10,54 +10,15 @@
 </head>
 
 <body>
-    <header>
-        <div class="cab-fondo">
-            <!--Nombre de la tienda-->
-            <div class="nombre">
-                <p>Nombre</p>
-            </div>
-
-            <!--Parte del usuario-->
-            <div>
-                <a href="/web/PerfilUsuario/Inicio.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
-                    </div>
-                    <div>
-                        <p id="nombreUser" class="userName">Nombre de usuario</p>
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="\web\Venta\favsVenta.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/fav0.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-            <!--Separación-->
-            <sep class="sep"></sep>
-            <!--Favoritos-->
-            <div>
-                <a href="/web/Venta/chat.html">
-                    <div class="cuadro">
-                        <img src="/img/Logos/chat.png" class="foto-c  foto">
-                    </div>
-                </a>
-            </div>
-        </div>
-    </header>
-    <div>
+    <div id="header"></div>
+    <div class="med">
         <!--Div imagen-->
         <div class="izq">
             <img src="/img/catalogo/img_prueba.webp" class="img" id="idImg1" width="450" height="600" />
         </div>
 
         <!--Div información-->
-        <div class="der recuadro">
+        <div class="der recuadro grid">
             <!--Nombres e ids-->
             <div class="izq">
                 <div>
@@ -70,16 +31,18 @@
                     <p id="propietario">Cristóbal José Jiménez Gómez</p>
                 </div>
             </div>
-
+            <br/>
             <!--Descripción del artículo-->
             <div>
-                <textarea name="descripcion" id="img1_desc" cols="102" rows="8">Descripción del artículo</textarea>
+                <div name="descripcion" class="curv" id="desc" cols="102" rows="8">
+                    Descripción del artículo
+                </div>
             </div>
 
             <!--Tallas y fav-->
             <div>
-                <p>Ubicación</p>
-                <div style="background-color: grey; width: 938px; height: 150px;" id="userUbicacion">
+                <label for="userUbicacion">Ubicación</label>
+                <div id="userUbicacion" class="curv">
                     mapa
                 </div>
             </div>
@@ -94,11 +57,15 @@
             </div>
         </div>
     </div>
-    <footer>
-        <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
-            <br/> Copyrigth@Aitana&Cristóbal
-            <br/> Esta página web está aprobadisima.</p>
-    </footer>
+    <footer style="position:inherit" id="footer"></footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script>
+        $(function() {
+            $('#header').load("/web/CódigoReutilizable/header_compra.html");
+            $('#footer').load("/web/CódigoReutilizable/footer.html");
+        });
+    </script>
 </body>
 
 
