--- a/web/Venta/catalogoVentas.html
+++ b/web/Venta/catalogoVentas.html
@@ -11,8 +11,9 @@
 
 <body>
     <div id="header"></div>
-    <div class="padre">
-        <template>
+    <div class="padre" id="productos">
+        <!--Template de como deberían se formatean las fotos-->
+        <!--
             <div class="imagen">
                 <a href="">
                     <img src="" id="idImg1" />
@@ -23,59 +24,26 @@
                     </div>
                 </a>
             </div>
-        </template>
-        <!--Ubicacion de cada foto-->
-        <div class="imagen">
-            <a href="/web/Venta/ComprarObjeto/objParticular.html">
-                <img src="/img/catalogo/img_prueba.webp" id="idImg1" />
-                <div class="content">
-                    <h2>Objeto</h2>
-                    <p>Bonita camisa ejej</p>
-                    <p id="precio">50€</p>
-                </div>
-            </a>
-        </div>
-        <div class="rect imagen">
-            <img id="idImg4" />
-            <div class="content">
-                <h2>Objeto</h2>
-                <p>Este objeto se encuentra en tienda, es de una seda...</p>
-                <p id="precio">50€</p>
-            </div>
-        </div>
-        <div class="rect imagen">
-            <img id="idImg4" />
-            <div class="content">
-                <h2>Objeto</h2>
-                <p>Este objeto se encuentra en tienda, es de una seda...</p>
-                <p id="precio">50€</p>
-            </div>
-        </div>
-        <div class="rect imagen">
-            <img id="idImg4" />
-            <div class="content">
-                <h2>Objeto</h2>
-                <p>Este objeto se encuentra en tienda, es de una seda...</p>
-                <p id="precio">50€</p>
-            </div>
-        </div>
-        <div class="rect imagen">
-            <img id="idImg4" />
-            <div class="content">
-                <h2>Objeto</h2>
-                <p>Este objeto se encuentra en tienda, es de una seda...</p>
-            </div>
-        </div>
+        -->
     </div>
 
     <footer id="footer"></footer>
-    
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script>
-        $(function(){
+        $(function() {
             $('#header').load("/web/CódigoReutilizable/header_venta.html");
             $('#footer').load("/web/CódigoReutilizable/footer.html");
         });
     </script>
+    <script src="/scripts/Antiguo/cargarPVenta.js">
+        window.onload = function() {
+            console.log("Esta parte ocurre");
+            loadProduct();
+            console.log("Se ejecuta");
+
+        }
+    </script>
 </body>
+
 </html>
